# aurmr_web_interface

./: .gitignore  CMakeLists.txt  README.md  package.json  package.xml  pnpm-lock.yaml  requirements.txt  setup.py
grasp_generation/: heuristic_grasp_server.py  optimize.py  process_data.py  utils.py
grasp_generation/aurmr_web_interface/: heuristic_grasp_server.py  optimize.py  process_data.py  tahoma_controller.py  utils.py
launch/: web_interface.launch
msg/: Grasp.msg  SE2.msg
scripts/: node.sh
src/app/: store.ts
src/features/counter/: Counter.tsx
src/features/grasp/: graspSlice.ts
src/features/ros/: ROSConnection.tsx  ROSVideoDisplay.tsx  ros.ts  rosSlice.ts
src/features/se2/: SE2.tsx  TargetAnchor.tsx  se2.utils.ts  se2Slice.ts
src/pages/: _app.tsx  index.tsx
srv/: ExecuteGrasp.srv  GenerateHeuristicGrasp.srv
